--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
         <p>Icon</p>
     </div>
     <div class="temperation">
+        <div class="temperature-degree-section">
         <h2 class="temperature-degree">34</h2>
+        <span>F</span>
+    </div>
         <div class="temparature-description">Its cold!</div>
     </div>
     <script src="app.js"></script>
